--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -51,7 +51,7 @@ jobs:
         uses: EndBug/add-and-commit@v7
         with:
           add: 'version.properties'
-          message: 'Bump version to v${majorVersion}.${minorVersion}.${patchVersion}'
+          message: 'Bump version to v${ env.VERSION }'
           author_email: 'git-action-bot@example.com'
           author_name: 'Git Action Bot'
 
