--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -21,22 +21,22 @@ jobs:
           source version.properties
           MAJOR_VERSION_CHANGED=false
           MINOR_VERSION_CHANGED=false
-          TYPE=Version
+          TYPE="Version"
 
           if [[ $COMMIT_MSG == *"BREAKING CHANGE"* || $COMMIT_MSG == *"!"* || $COMMIT_MSG == *"major:"* ]]; then
               ((majorVersion++))
               minorVersion=0
               patchVersion=0
               MAJOR_VERSION_CHANGED=true
-              TYPE=majorVersion
+              TYPE="majorVersion"
           elif [[ $COMMIT_MSG == *"feat:"* || $COMMIT_MSG == *"minor:"* ]]; then
               ((minorVersion++))
               patchVersion=0
               MINOR_VERSION_CHANGED=true
-              TYPE=minorVersion
+              TYPE="minorVersion"
           else
               ((patchVersion++))
-              TYPE=patchVersion
+              TYPE="patchVersion"
           fi
 
           echo "majorVersion=$majorVersion" > version.properties
