--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -13,15 +13,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Change permissions of version.properties file
-        run: chmod 644 version.properties
-
       # Uses semantic commits to automate version bumping. No scope or "fix:" = PATCH, "feat:" = MINOR, "BREAKING CHANGE:" or fix/feat with appended "!" = MAJOR
       # Details here https://github.com/oflynned/android-version-bump#workflow and here https://www.conventionalcommits.org/en/v1.0.0/ (test)
       - name: Increment version
         run: |
           COMMIT_MSG=$(git log -1 --pretty=%B)
+          echo "$COMMIT_MSG"
           source version.properties
+          echo "$majorVersion.$minorVersion.$patchVersion.$buildNumber"
           MAJOR_VERSION_CHANGED=false
           MINOR_VERSION_CHANGED=false
           TYPE="Version"
