--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -13,40 +13,33 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      # Uses semantic commits to automate version bumping. No scope or "fix:" = PATCH, "feat:" = MINOR, "BREAKING CHANGE:" or fix/feat with appended "!" = MAJOR
-      # Details here https://github.com/oflynned/android-version-bump#workflow and here https://www.conventionalcommits.org/en/v1.0.0/ (test)
+      # Uses semantic commits to automate version bumping. No scope or "fix:" = PATCH, "feat:" or "minor:" = MINOR, "BREAKING CHANGE:", "major:", or fix/feat with appended "!" = MAJOR
+      # Details here https://www.conventionalcommits.org/en/v1.0.0/ (test)
       - name: Increment version
         run: |
           #!/bin/bash
-          set -x
           COMMIT_MSG=$(git log -1 --pretty=%B)
-          echo "$COMMIT_MSG"
           source version.properties
-          echo "$majorVersion.$minorVersion.$patchVersion.$buildNumber"
           MAJOR_VERSION_CHANGED=false
           MINOR_VERSION_CHANGED=false
           TYPE="patchVersion"
           buildNumber=${{ github.run_number }}
-          echo "$buildNumber"
+
           if [[ $COMMIT_MSG == *"BREAKING CHANGE"* || $COMMIT_MSG == *"!"* || $COMMIT_MSG == *"major:"* ]]; then
               majorVersion=$((majorVersion + 1))
               minorVersion=0
               patchVersion=0
               MAJOR_VERSION_CHANGED=true
               TYPE="majorVersion"
-              echo "Major change"
           elif [[ $COMMIT_MSG == *"feat:"* || $COMMIT_MSG == *"minor:"* ]]; then
               minorVersion=$((minorVersion + 1))
               patchVersion=0
               MINOR_VERSION_CHANGED=true
               TYPE="minorVersion"
-              echo "Minor change"
           else
               patchVersion=$((patchVersion + 1))
-              echo "Patch change"
           fi
 
-          echo "Type is $TYPE, major version changes is $MAJOR_VERSION_CHANGED and minor is $MINOR_VERSION_CHANGED"
           echo "majorVersion=$majorVersion" > version.properties
           echo "minorVersion=$minorVersion" >> version.properties
           echo "patchVersion=$patchVersion" >> version.properties
