--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      # Uses semantic commits to automate version bumping. No scope or "fix:" = PATCH, "feat:" or "minor:" = MINOR, "BREAKING CHANGE:", "major:", or fix/feat with appended "!" = MAJOR
-      # Details here https://www.conventionalcommits.org/en/v1.0.0/ (test)
+      # Uses semantic commits to automate version bumping.
+      # No scope or "fix:" = PATCH, "feat:" or "minor:" = MINOR, "BREAKING CHANGE:", "major:", or fix/feat with appended "!" = MAJOR
+      # Additional details: https://www.conventionalcommits.org/en/v1.0.0/
       - name: Increment version
         run: |
           #!/bin/bash
