test branch commit

--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Checkout
+      - name: Checkout PR Head
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
