--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -96,17 +96,17 @@ jobs:
 
       - name: Get matching release
         uses: cardinalby/git-get-release-action@v1
+        id: matching_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           releaseName: v${{ env.RELEASE }}
-          outputVariable: matching_release
+          doNotFailIfNotFound: 'true'
 
       - name: Delete matching release if exists
-        if: steps.get_matching_release.outputs.matching_release != ''
+        if: steps.matching_release.outputs.id != ''
         run: |
-          release_id=$(echo "${{ steps.get_matching_release.outputs.matching_release }}" | jq -r '.id')
-          curl -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/$release_id"
+          curl -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/${{ steps.matching_release.outputs.id}}"
 
       # Updates the latest release if just a new patch, drafts a new prerelease if major or minor version has changed 
       - name: Make github release
