--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@v6
+
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -52,4 +56,4 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           artifacts-branch: artifacts
           artifacts: |
-            app/build/outputs/apk/release/Field-Book-prerelease.apk
+            app/build/outputs/apk/release/Field-Book-${{ steps.branch-name.outputs.current_branch }}.apk
