add workflow to cleanup archive on branch deletion

--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -47,7 +47,7 @@ jobs:
           path: app/build/outputs/
       
       - name: Rename APK file
-        run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/Field-Book-prerelease.apk
+        run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/Field-Book-${{ steps.branch-name.outputs.current_branch }}.apk
 
       - name: Attach APK to PR
         uses: gavv/pull-request-artifacts@v1.0.0
