--- a/.github/workflows/archive-cleanup.yml
+++ b/.github/workflows/archive-cleanup.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout archive branch
         uses: actions/checkout@v2
         with:
-          ref: archive
+          ref: artifacts
 
       - name: Commit removal of deleted branch's apk
         uses: EndBug/add-and-commit@v7
