--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,5 +1,5 @@
 name: 🐛 Bug Report
-about: I think I've discovered a bug or other issue.
+description: I think I've discovered a bug or other issue.
 title: "[BUG]: "
 labels: "bug"
 
