--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,5 +1,5 @@
 name: 🪄 Feature Request
-about: I would like to see a new feature in Field Book.
+description: I would like to see a new feature in Field Book.
 title: "[REQUEST]: "
 labels: "feature request"
 
