--- a/.github/workflows/archive-cleanup.yml
+++ b/.github/workflows/archive-cleanup.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Commit removal of deleted branch's apk
         uses: EndBug/add-and-commit@v9
         with:
-          remove: "*Field-Book-${{ github.event.ref }}.apk"
-          message: "Remove Field-Book-${{ github.event.ref }}.apk"
+          remove: "*${{ github.event.ref }}-Field-Book.apk"
+          message: "Remove artifacts linked to deleted ${{ github.event.ref }} branch"
           push: --force
           author_email: git-action-bot@example.com
           author_name: Git Action Bot
