--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -19,6 +19,12 @@ jobs:
         id: branch-name
         uses: tj-actions/branch-names@v6
 
+      - name: Count existing APKs
+        id: count-apks
+        run: |
+          APK_COUNT=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/contents?ref=artifacts | grep -o '"name": ".*${{ steps.branch-name.outputs.current_branch }}-Field-Book.apk"' | wc -l)
+          echo "APK_NUMBER=$((APK_COUNT + 1))" >> $GITHUB_ENV
+
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -48,7 +54,7 @@ jobs:
       
 
       - name: Rename APK file
-        run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/${{ github.run_number }}-${{ steps.branch-name.outputs.current_branch }}-Field-Book.apk
+        run: mv app/build/outputs/apk/release/app-release-unsigned-signed.apk app/build/outputs/apk/release/${{ env.APK_NUMBER }}-${{ steps.branch-name.outputs.current_branch }}-Field-Book.apk
 
       - name: Attach APK to PR using artifacts branch
         uses: gavv/pull-request-artifacts@v1.0.0
@@ -57,4 +63,4 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           artifacts-branch: artifacts
           artifacts: |
-            app/build/outputs/apk/release/${{ github.run_number }}-${{ steps.branch-name.outputs.current_branch }}-Field-Book.apk
+            app/build/outputs/apk/release/${{ env.APK_NUMBER }}-${{ steps.branch-name.outputs.current_branch }}-Field-Book.apk
