--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'com.google.dagger.hilt.android'
 
-// Code that accesses version info from version.properties file in rootdir
+// Code that accesses version.properties file in rootdir to construct versionCode and versionName
 
 Properties props = new Properties()
 props.load(new FileInputStream("$project.rootDir/version.properties"))
