--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Increment version
         run: |
           #!/bin/bash
-          COMMIT_MSG=$(git show -s --format=%B)
+          COMMIT_MSG=$(git log -1 --pretty=format:"%b" || git log -1 --pretty=format:"%B")
           source version.properties
           BUMP_TYPE="patchVersion"
           buildNumber=${{ github.run_number }}
