--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,28 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'androidx.navigation.safeargs'
 
+Properties props = new Properties()
+props.load(new FileInputStream("$project.rootDir/version.properties"))
+props.each { prop ->
+    project.ext.set(prop.key, prop.value)
+}
+
+private Integer makeVersionCode() {
+    int major = ext.majorVersion as Integer
+    int minor = ext.minorVersion as Integer
+    int patch = ext.patchVersion as Integer
+
+    return major * 10000 + minor * 100 + patch
+}
+
+private String makeVersionName() {
+    if (ext.buildNumber) {
+        return "${ext.majorVersion}.${ext.minorVersion}.${ext.patchVersion}.${ext.buildNumber}"
+    }
+
+    return "${ext.majorVersion}.${ext.minorVersion}.${ext.patchVersion}"
+}
+
 android {
     signingConfigs {
         playStoreConfig {
@@ -18,6 +40,20 @@ android {
                 storeFile file('keystore.keystore')
             } else println("Non-keystore build.")
         }
+        gitActionConfig {
+            def tmpFilePath = System.getProperty("user.home") + "/work/_temp/keystore/"
+            def allFilesFromDir = new File(tmpFilePath).listFiles()
+
+            if (allFilesFromDir != null) {
+                def keystoreFile = allFilesFromDir.first()
+                keystoreFile.renameTo("keystore/your_keystore.jks")
+            }
+
+            storeFile = file("keystore/your_keystore.jks")
+            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+            keyAlias System.getenv("SIGNING_KEY_ALIAS")
+            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+        }
     }
 
     compileSdkVersion 31
@@ -26,8 +62,8 @@ android {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode = 530
-        versionName = '5.3.0'
+        versionCode = makeVersionCode()
+        versionName = makeVersionName()
         multiDexEnabled true
     }
 
