--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -2,10 +2,8 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'docs/**'
-      - 'README.md'
-      - '.github/**'
+    paths:
+      - 'app/**'
 
 name: do-github-release
 
