--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ private String makeVersionName() {
 
 android {
     signingConfigs {
-        /* playStoreConfig {
+        playStoreConfig {
             Properties keystoreProps = new Properties()
             if (file('keystore.config').exists()) {
                 keystoreProps.load(new FileInputStream(file('keystore.config')))
@@ -40,7 +40,7 @@ android {
                 storePassword keystoreProps['storePassword']
                 storeFile file('keystore.keystore')
             } else println("Non-keystore build.")
-        } */
+        }
         gitActionConfig {
             def tmpFilePath = System.getProperty("user.home") + "/work/_temp/keystore/"
             def allFilesFromDir = new File(tmpFilePath).listFiles()
@@ -74,7 +74,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-            signingConfig signingConfigs.playStoreConfig //Add your own signing config
+            // signingConfig signingConfigs.playStoreConfig //Add your own signing config
         }
 
         debug {
