--- a/.github/workflows/pr-prerelease.yml
+++ b/.github/workflows/pr-prerelease.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          token: ${{secrets.ACTIONS_PAT}}
 
       - name: Get branch name
         id: branch-name
